--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: inngage_plugin
 description: The inngage plugin to flutter apps.
-version: 1.0.0+1
-author: inngage 
+version: 1.0.0
 homepage: https://inngage.com.br
 
 environment:
@@ -24,6 +23,8 @@ dependencies:
   devicelocale: ^0.3.2
   #version
   package_info: ^0.4.3
+  meta: ^1.1.8
+  http: ^0.12.2
   
 dev_dependencies:
   flutter_test:
