--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,31 +1,32 @@
 name: inngage_plugin
 description: The inngage plugin to flutter apps.
-version: 1.0.4
+version: 1.0.5
 homepage: https://inngage.com.br
 
 environment:
-  sdk: ">=2.5.2 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
   #Android and iOS getters to get platform-specific device information
-  device_info: ^0.4.2+7
-   #Firebase
-  firebase_core: ^0.5.0
-  firebase_messaging: ^7.0.0
+  device_info:
+    ^2.0.2
+    #Firebase
+  firebase_core: ^1.6.0
+  firebase_messaging: ^10.0.6
   # Launch external URLs
-  url_launcher: ^5.5.2
+  url_launcher: ^6.0.10
   # webview
-  flutter_webview_plugin: ^0.3.11
+  flutter_webview_plugin: ^0.4.0
   #Locale
-  devicelocale: ^0.3.2
+  devicelocale: ^0.4.2
   #version
-  package_info: ^0.4.3
-  meta: ^1.1.8
-  http: ^0.12.2
-  
+  package_info: ^2.0.2
+  meta: ^1.3.0
+  http: ^0.13.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,7 +47,6 @@ flutter:
         pluginClass: InngagePlugin
       ios:
         pluginClass: InngagePlugin
-
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -57,7 +57,6 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # To add custom fonts to your plugin package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
