--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: inngage_plugin
 description: The inngage plugin to flutter apps.
-version: 1.3.4
+version: 1.3.5
 homepage: https://inngage.com.br
 
 environment:
@@ -26,6 +26,7 @@ dependencies:
   package_info: ^2.0.2
   meta: ^1.3.0
   http: ^0.13.3
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
