--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
     #Firebase
   firebase_core: ^1.6.0
   firebase_messaging: ^10.0.6
+  #localNotificaiton
+  flutter_local_notifications: ^9.0.1
   # Launch external URLs
   url_launcher: ^6.0.10
   # webview
