--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: inngage_plugin
 description: The inngage plugin to flutter apps.
-version: 1.3.6
+version: 1.4.0
 homepage: https://inngage.com.br
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.10.0"
+  sdk: ">=2.16.1 <3.0.0"
+  flutter: ">=2.5.0"
 
 dependencies:
   flutter:
@@ -14,25 +14,25 @@ dependencies:
   device_info:
     ^2.0.2
     #Firebase
-  firebase_core: ^1.6.0
-  firebase_messaging: ^10.0.6
+  firebase_core: ^1.12.0
+  firebase_messaging: ^11.2.6
   #localNotificaiton
-  flutter_local_notifications: ^9.0.1
+  flutter_local_notifications: ^9.3.2
   # Launch external URLs
-  url_launcher: ^6.0.10
+  url_launcher: ^6.0.20
   # webview
   flutter_webview_plugin: ^0.4.0
   #Locale
-  devicelocale: ^0.4.2
+  devicelocale: ^0.5.0
   #version
   package_info: ^2.0.2
-  meta: ^1.3.0
-  http: ^0.13.3
+  meta: ^1.7.0
+  http: ^0.13.4
   logger: ^1.1.0
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -50,6 +50,7 @@ flutter:
         pluginClass: InngagePlugin
       ios:
         pluginClass: InngagePlugin
+
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -60,6 +61,7 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
+
   # To add custom fonts to your plugin package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
