--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: inngage_plugin
 description: The inngage plugin to flutter apps.
-version: 2.0.0
+version: 2.0.0+1
 homepage: https://inngage.com.br
 
 environment:
