--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.inngage_plugin_example">
+     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
    <application
         android:label="inngage_plugin_example"
         android:name="${applicationName}"
