--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,7 +6,7 @@ description: Demonstrates how to use the inngage_plugin plugin.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=2.18.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -18,9 +18,11 @@ dependencies:
   flutter:
     sdk: flutter
     #Firebase
-  firebase_core: ^1.20.0
-  firebase_messaging: ^12.0.1
-  firebase_in_app_messaging: ^0.6.0+20
+  firebase_core: ^1.22.0
+  firebase_messaging: ^13.0.2
+  firebase_in_app_messaging: ^0.6.0+24
+    #localNotificaiton
+  flutter_local_notifications: ^11.0.0 
   inngage_plugin:
     # When depending on this package from a real application you should use:
     #   inngage_plugin: ^x.y.z
