--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: inngage_plugin
 description: The inngage plugin to flutter apps.
-version: 2.0.7
+version: 2.0.8
 homepage: https://inngage.com.br
 
 environment:
@@ -15,29 +15,29 @@ dependencies:
   device_info: ^2.0.3
   
   #Firebase
-  firebase_core: ^2.1.0
-  firebase_messaging: ^14.0.2
+  firebase_core: ^2.10.0
+  firebase_messaging: ^14.4.1
   
 
   #localNotificaiton
-  flutter_local_notifications: ^12.0.3 
+  flutter_local_notifications: ^13.0.0 
 
   # Launch external URLs
-  url_launcher: ^6.1.6
+  url_launcher: ^6.1.10
 
   # webview
-  webview_flutter: ^3.0.4
+  webview_flutter: 3.0.4
 
   #Locale
   devicelocale: 0.5.0
 
   #version
   package_info: ^2.0.2
-  advertising_id: ^2.3.0
+  advertising_id: ^2.4.0
   meta: ^1.7.0
   http: ^0.13.4
   logger: ^1.1.0
-  flutter_image_slideshow: ^0.1.2
+  flutter_image_slideshow: ^0.1.5
   flutter_secure_storage: ^8.0.0
 dev_dependencies:
   flutter_test:
