--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: inngage_plugin
 description: The inngage plugin to flutter apps.
-version: 2.0.8
+version: 2.0.8+1
 homepage: https://inngage.com.br
 
 environment:
@@ -26,7 +26,7 @@ dependencies:
   url_launcher: ^6.1.10
 
   # webview
-  webview_flutter: 3.0.4
+  webview_flutter: ^4.2.0
 
   #Locale
   devicelocale: 0.5.0
