--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: inngage_plugin
 description: The inngage plugin to flutter apps.
-version: 2.0.8+4
+version: 2.0.9
 homepage: https://inngage.com.br
 
 environment:
