--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,6 @@ dependencies:
   #Firebase
   firebase_core: ^2.10.0
   firebase_messaging: ^14.4.1
-  
 
   #localNotificaiton
   flutter_local_notifications: ^13.0.0 
@@ -30,6 +29,9 @@ dependencies:
 
   #Locale
   devicelocale: ^0.5.0
+
+  #Geolocation
+  geolocator: ^10.1.0
 
   #version
   package_info: ^2.0.2
