--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,7 +21,9 @@ dependencies:
  #Firebase
   firebase_core: ^2.10.0
   firebase_messaging: ^14.4.1
-  
+
+  logger: ^2.0.2+1
+  flutter_secure_storage: ^9.0.0
 
   #localNotificaiton
   flutter_local_notifications: ^16.3.3 
