--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,50 +11,44 @@ dependencies:
   flutter:
     sdk: flutter
   
-  #Android and iOS getters to get platform-specific device information
+  # android and iOS getters to get platform-specific device information
   device_info: ^2.0.3
+  device_info_plus: ^10.1.0
   
-  #Firebase
-  firebase_core: ^2.10.0
-  firebase_messaging: ^14.4.1
+  # firebase
+  firebase_core: ^3.1.0
+  firebase_messaging: ^15.0.1
 
-  #localNotificaiton
-  flutter_local_notifications: ^16.3.3 
+  # localNotificaiton
+  flutter_local_notifications: ^17.1.2 
 
-  # Launch external URLs
-  url_launcher: ^6.1.10
+  # launch external URLs
+  url_launcher: ^6.3.0
 
   # webview
-  webview_flutter: ^4.2.0
+  webview_flutter: ^4.8.0
 
-  #Locale
-  devicelocale: ^0.5.0
+  # locale
+  devicelocale: ^0.7.1
 
-  #Geolocation
-  geolocator: ^10.1.0
+  # geolocation
+  geolocator: ^12.0.0
 
-  #version
+  # version
   package_info: ^2.0.2
-  advertising_id: ^2.4.0
-  meta: ^1.7.0
-  http: ^1.1.0
+  advertising_id: ^2.6.0
+  meta: ^1.12.0
+  http: ^1.2.1
   logger: ^2.3.0
-  flutter_image_slideshow: ^0.1.5
+  flutter_image_slideshow: ^0.1.6
   flutter_secure_storage: ^9.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^4.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The 'pluginClass' and Android 'package' identifiers should not ordinarily
-  # be modified. They are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
   plugin: 
     platforms:
       android:
@@ -62,34 +56,3 @@ flutter:
         pluginClass: InngagePlugin
       ios:
         pluginClass: InngagePlugin
-
-  # To add assets to your plugin package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # To add custom fonts to your plugin package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
