--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,11 @@ dependencies:
   
   # android and iOS getters to get platform-specific device information
   device_info: ^2.0.3
-  device_info_plus: ^10.1.0
+  device_info_plus: ">=8.1.0 <10.0.0"
   
   # firebase
   firebase_core: ^3.1.0
+  firebase_analytics: ^11.1.0
   firebase_messaging: ^15.0.1
 
   # localNotificaiton
