--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: inngage_plugin
 description: Inngage Plugin for Flutter applications for marketing campaign optimization using Push Notification and In App Messages channels.
-version: 3.5.0
+version: 3.5.1
 homepage: https://inngage.com.br
 
 environment:
@@ -45,6 +45,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
+  mockito: ^5.4.4
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
