--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,7 @@ dependencies:
     sdk: flutter
   
   # android and iOS getters to get platform-specific device information
-  device_info: ^2.0.3
-  device_info_plus: ">=8.1.0 <10.0.0"
+  device_info_plus: ">=8.1.0 <10.1.2"
   
   # firebase
   firebase_core: ^3.1.0
@@ -36,7 +35,7 @@ dependencies:
   geolocator: ^12.0.0
 
   # version
-  package_info: ^2.0.2
+  package_info_plus: ">=4.0.1 <6.0.0"
   advertising_id: ^2.6.0
   meta: ^1.12.0
   http: ^1.2.1
