--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: inngage_plugin
 description: Inngage Plugin for Flutter applications for marketing campaign optimization using Push Notification and In App Messages channels.
-version: 3.5.2
+version: 3.6.0
 homepage: https://inngage.com.br
 
 environment:
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   
   # android and iOS getters to get platform-specific device information
-  device_info_plus: ">=8.1.0 <10.1.2"
+  device_info_plus: ^10.1.2
   
   # firebase
   firebase_core: ^3.1.0
@@ -29,13 +29,13 @@ dependencies:
   webview_flutter: ^4.8.0
 
   # locale
-  devicelocale: ^0.7.1
+  devicelocale: ^0.8.0
 
   # geolocation
   geolocator: ^12.0.0
 
   # version
-  package_info_plus: ">=4.0.1 <6.0.0"
+  package_info_plus: ^8.0.2
   advertising_id: ^2.6.0
   meta: ^1.12.0
   http: ^1.2.1
