--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   geolocator: ^12.0.0
 
   # version
+  uuid: ^4.5.1
+  shared_preferences: ^2.3.2
   package_info_plus: ^8.0.2
   advertising_id: ^2.6.0
   meta: ^1.12.0
