--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,10 @@ dependencies:
   firebase_messaging: ^15.0.1
 
   # localNotificaiton
-  flutter_local_notifications: ^17.1.2 
+  flutter_local_notifications: ^18.0.1
 
   # launch external URLs
-  url_launcher: ^6.3.0
+  url_launcher: ^6.3.1
 
   # webview
   webview_flutter: ^4.8.0
@@ -44,6 +44,8 @@ dependencies:
   logger: ^2.3.0
   flutter_image_slideshow: ^0.1.6
   flutter_secure_storage: ^9.2.2
+  win32: ^5.10.0
+  
 
 dev_dependencies:
   mockito: ^5.4.4
