update: add namespace in build grandle

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -24,6 +24,8 @@ if (flutterVersionName == null) {
 }
 
 android {
+    namespace "com.inngage_plugin"
+
     compileSdkVersion 34
 
     compileOptions {
