fix: remove 'package' attribute from AndroidManifest to support AGP 8.x+

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -24,7 +24,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.inngage_plugin"
+    namespace "com.inngage_plugin_example"
 
     compileSdkVersion 34
 
